--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "pf",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://greycat20142017.github.io/pf",
   "dependencies": {
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
+    "gh-pages": "^2.0.1",
+    "node-sass": "^4.11.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-scripts": "2.1.1"
@@ -13,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
