--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,7 +7,7 @@
       "sizes": "512x512"
     },
     {
-      "src": "/.favicon.ico",
+      "src": "./favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }],
